[project]
name = "proyecto-ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy>=3.0.3",
    "fastapi[standard]>=0.120.4",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "ruff>=0.14.3",
    "tensorflow>=2.18.1",
]
